// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiTourStepIndicator can be complete 1`] = `
<li
  aria-label="aria-label"
  class="ouiTourStepIndicator ouiTourStepIndicator--complete testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    aria-label="complete"
    class="ouiStepNumber__icon"
    color="subdued"
    data-ouiicon-type="dot"
  />
</li>
`;

exports[`OuiTourStepIndicator can be incomplete 1`] = `
<li
  aria-label="aria-label"
  class="ouiTourStepIndicator ouiTourStepIndicator--incomplete testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    aria-label="incomplete"
    class="ouiStepNumber__icon"
    color="subdued"
    data-ouiicon-type="dot"
  />
</li>
`;

exports[`OuiTourStepIndicator is rendered 1`] = `
<li
  aria-label="aria-label"
  class="ouiTourStepIndicator ouiTourStepIndicator--active testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    aria-current="step"
    aria-label="active"
    class="ouiStepNumber__icon"
    color="success"
    data-ouiicon-type="dot"
  />
</li>
`;
